// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > renders NameWithAddress with default props 1`] = `
<body>
  <div>
    <div
      class="ml-4 flex w-fit items-center justify-start"
      data-testid="name-with-address"
      id="name-with-address"
    >
      <div
        class="flex flex-col items-start"
      >
        <div
          class="flex w-fit min-w-[150px] items-center gap-1"
        >
          <div
            class=" text-sm font-normal"
            data-testid="text"
          >
            
          </div>
          <!--&lt;Text&gt;-->
           
          <button />
        </div>
      </div>
    </div>
    <!--&lt;NameWithAddress&gt;-->
  </div>
</body>
`;

exports[`Text > renders PageTitle with default props 1`] = `
<body>
  <div>
    <div
      class="mb-8 flex items-center gap-4"
      data-testid="page-title"
    >
       
      <div
        class="font-poppins leading-[-2px] text-[#030115] text-3xl font-medium"
        data-testid="text"
      >
        
      </div>
      <!--&lt;Text&gt;-->
       
    </div>
    <!--&lt;PageTitle&gt;-->
  </div>
</body>
`;

exports[`Text > renders TableHeadingText with default props 1`] = `
<body>
  <div>
    <div
      class="mt-0.5 flex flex-nowrap items-center justify-start gap-1 text-center text-[14px] font-normal text-[#030115]"
      data-testid="table-heading-text"
    >
      <div
        class="relative flex items-center gap-1"
      >
        <span
          class="w-fit tracking-widest"
        >
          
        </span>
         
      </div>
    </div>
    <!--&lt;TableHeadingText&gt;-->
  </div>
</body>
`;

exports[`Text > renders TextInputCard with default props 1`] = `
<body>
  <div>
    <div
      class="w-full relative border border-[#D9DADE] bg-white py-2.5 px-4 rounded-full"
      data-testid="input-card"
      id=""
    >
      <div
        class="mb-1 flex items-center gap-1"
      >
        <div
          class="absolute left-[18px] top-[-10px] mb-4 bg-white px-2 font-poppins text-sm font-light text-[#030115] text-sm font-normal"
          data-testid="text"
        >
          
        </div>
        <!--&lt;Text&gt;-->
         
      </div>
       
      <div
        class="flex"
      >
        <div
          class="flex py-[3px] text-base font-normal"
          data-testid="text"
        >
          
        </div>
        <!--&lt;Text&gt;-->
         
      </div>
    </div>
    <!--&lt;InputCard&gt;-->
    <!--&lt;TextInputCard&gt;-->
  </div>
</body>
`;

exports[`Text > renders TxnHashText with default props 1`] = `
<body>
  <div>
    <div
      class="flex items-center justify-start gap-2"
      data-testid="txn-hash-text"
    >
      
       
      <a
        class="shrink-0"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="txn link"
          src="/images/openinnew.svg"
          width="13px"
        />
      </a>
      <!--&lt;TxnIcon&gt;-->
    </div>
    <!--&lt;TxnHashText&gt;-->
  </div>
</body>
`;
